files tweaks, queries confirmed working

--- a/report/wbbz74.tex
+++ b/report/wbbz74.tex
@@ -193,7 +193,7 @@ return $b
 </books>
 \end{verbatim} 
 
-\item \textit{XPath}: If we assume both datasets are present in the same file (where the \texttt{<books>} and \texttt{<media>} nodes are both present within a \texttt{<root>} node, which we will call \texttt{combined.xml}), we can construct a working query---otherwise this would not be possible, as XPath is not able to access more than one file at once. We must assume that the nodes in the \texttt{<books>} and \texttt{<media>} nodes are already ordered by date, which is the major limitation of this technique compared to what we can achieve with XQuery. We return all books where the numeric value of the \texttt{publicationDate} is less than the release year of the second movie that appears in the returned list of movies about Mary Poppins. This query is not as extensible if the size of the database were to be increased. (As this query is long it is broken up into several lines here, although it should be run just as a single line when executing).
+\item \textit{XPath}: If we assume both datasets are present in the same file (where the \texttt{<books>} and \texttt{<media>} nodes are both present within a \texttt{<root>} node, which we will call \texttt{combined.xml}), we can construct a working query---otherwise this would not be possible, as XPath is not able to access more than one file at once. We must assume that the nodes in the \texttt{<books>} and \texttt{<media>} nodes are already ordered by date, which is the major limitation of this technique compared to what we can achieve with XQuery. We return all books where the numeric value of the \texttt{publicationDate} is less than the release year of the second movie that appears in the returned list of movies about Mary Poppins. This query is not as extensible if the size of the database were to be increased.
 
 % verified working
 \begin{small}
