--- a/report/wbbz74.tex
+++ b/report/wbbz74.tex
@@ -1,5 +1,7 @@
 \documentclass[11pt]{article}
 
+\renewcommand{\familydefault}{\sfdefault}
+
 % Make margins smaller
 \usepackage[top=1.1in, bottom=1.1in, left=1.1in, right=1.1in]{geometry}
 % more advanced mathematical symbols
@@ -14,6 +16,10 @@
 \usepackage{pgfgantt} % gantt chart!
 \usepackage{pdfpages}
 
+\renewcommand{\baselinestretch}{1.2}
+
+
+
 \graphicspath{ {./images/} }
 
 \begin{document}
@@ -25,7 +31,7 @@
 
 \section{Tree Structure}
 
-See the attached document for the tree diagram of \texttt{books.xml}. This is available on the \textbf{final page} of this report. Any oddities in the layout are only a result of a lack of space.
+See the attached document on the \textbf{final page} of this report for the tree diagram of \texttt{books.xml}. Any oddities in the layout are only a result of a lack of space.
 
 \section{Querying}
 
@@ -46,9 +52,10 @@ All query files were posted as part of this submission.
 }</books>
 \end{verbatim}
 \end{small}
+
 \item \textit{Interpretation}: This query first uses the Restricted Kleene Closure to find every occurrence of \texttt{<book>} in the XML structure. This ensures that we find all books at all levels of the database (if the database were to be grown in the future or if books were to be located under differently named nodes to what is currently in place). We then use a tag predicate of \texttt{[@publicationDate<"1939"]} to filter out all books that were NOT released before 1939. For all the books returned by this, we then check if they have a \texttt{title} property. If they do, we use a nested predicate to check the title of the book. If the book title contains the string \texttt{"Mary Poppins"} (not including these quotation marks), the full book node will be returned. Only distinct books titles will be included in our results, as we make use of the \texttt{distinct-values} function to ensure that each Mary Poppins book is only included in the result once.
 
-\item \textit{Limitations}: this query will only find Mary Poppins books if her name appears directly in the title. If such a Mary Poppins book existed that did not feature her name in the title, it would not be returned by our query. It is not sufficient just to check the author or illustrator as they may have been involved in creating other books (not Mary Poppins). Additionally, WWII started in September of 1939 and---as we have no way to distinguish the month of publication---it may be the case that a book published in 1939 was actually published before WWII. We have no way of telling this, we just ignore all books published in 1939 to be sure.
+\item \textit{Limitations}: This query will only find Mary Poppins books if her name appears directly in the title. If such a Mary Poppins book existed that did not feature her name in the title, it would not be returned by our query. It is not sufficient just to check the author or illustrator as they may have been involved in creating other books (not Mary Poppins). Additionally, WWII started in September of 1939 and---as we have no way to distinguish the month of publication---it may be the case that a book published in 1939 was actually published before WWII. We have no way of telling this, we just ignore all books published in 1939 to be sure.
 \item \textit{Output}:
 \begin{verbatim}
 <books>
@@ -80,7 +87,8 @@ All query files were posted as part of this submission.
 \end{verbatim}
 \end{small}
 \item \textit{Interpretation}: This query first uses the Restricted Kleene Closure to find every occurrence of \texttt{<movie>} in the XML structure (we assume ``movie'' refers to the \texttt{<movie>} tag rather than the contents of the \texttt{@type} attribute on each \texttt{<movie>}). This ensures that we find all movies at all levels of the database (if the database were to be grown in the future or if movies were to be placed elsewhere in a large database). We then use a tag predicate of \texttt{academyNominations}, filtering out all movies that do not include an \texttt{<academyNominations>} node. We access the text stored at this node using the XPath \texttt{text()} function. As the XML files provided have whitespace surrounding the text in each node, we use the \texttt{normalize-space} function to remove this whitespace, as to not retrieve inaccurate results. We then ensure that the number of nominations is greater than 0, as it could be possible a movie could have an \texttt{<academyNominations>} node with 0 nominations. Movie nodes filtered out by this predicate are not included in our results.
-\item \textit{Limitations}: this query relies on the fact that \texttt{academyNominations} are stored as an integer inside the \texttt{<academyNominations>} node. If the nominations were instead listed out (as \texttt{<nominator>} nodes for example), the query would not be able to identify these. Otherwise, if all movies follow this style of listing nominations, there are no further limitations. If one of the other entities in the \texttt{media.xml} file were to receive an \texttt{academyNominations} (such as \texttt{broadcast} or \texttt{theater}), these would not be found, as we only search for \texttt{movie} entities. Although, as this is what the question specifically asks for, this is less of an issue. 
+
+\item \textit{Limitations}: This query relies on the fact that \texttt{academyNominations} are stored as an integer inside the \texttt{<academyNominations>} node. If the nominations were instead listed out (as \texttt{<nominator>} nodes for example), the query would not be able to identify these. Otherwise, if all movies follow this style of listing nominations, there are no further limitations. If one of the other entities in the \texttt{media.xml} file were to receive an \texttt{academyNominations} (such as \texttt{broadcast} or \texttt{theater}), these would not be found, as we only search for \texttt{movie} entities. Although, as this is what the question specifically asks for, this is less of an issue. 
 
 \item \textit{Output}:
 \begin{verbatim}
@@ -118,7 +126,8 @@ let $b := distinct-values(doc("books.xml")//book[title[contains(text(),"Mary Pop
 return <result>{count($b)}</result>
 \end{verbatim}
 \end{small}
-\item \textit{Interpretation}: we start by using the \texttt{let} keyword to bind to all results of a query at once, allowing us to perform aggregate operations on the results of the query. We open the \texttt{"books.xml"} file such that we can query it. Using a similar XPath style query as question 1, we query the document for all \texttt{book} nodes using the Restricted Kleene Closure. This will allow us to find all possible \texttt{<book>} nodes at any point in the database, even if the database were to grow in size in the future. We then use a predicate to assert that each returned \texttt{book} has a \texttt{title} property. Then, we use a nested predicate to evaluate the text of the title, using the \texttt{text()} function. We assert that the title must contain the string \texttt{"Mary Poppins"}, such that all books about Mary Poppins are returned. We use the \texttt{distinct-values} function to ensure that if there were to be duplicate books found in the database with the same book title, this will only be counted once. Then, in the \texttt{return} block, we perform an aggregate \texttt{count} of all the results, returning this in a \texttt{<result>} tag. This formatting of the answer would help a parser interpret this result potentially, making it clear it is the result of the query.
+
+\item \textit{Interpretation}: We start by using the \texttt{let} keyword to bind to all results of a query at once, allowing us to perform aggregate operations on the results of the query. We open the \texttt{"books.xml"} file such that we can query it. Using a similar XPath style query as question 1, we query the document for all \texttt{book} nodes using the Restricted Kleene Closure. This will allow us to find all possible \texttt{<book>} nodes at any point in the database, even if the database were to grow in size in the future. We then use a predicate to assert that each returned \texttt{book} has a \texttt{title} property. Then, we use a nested predicate to evaluate the text of the title, using the \texttt{text()} function. We assert that the title must contain the string \texttt{"Mary Poppins"}, such that all books about Mary Poppins are returned. We use the \texttt{distinct-values} function to ensure that if there were to be duplicate books found in the database with the same book title, this will only be counted once. Then, in the \texttt{return} block, we perform an aggregate \texttt{count} of all the results, returning this in a \texttt{<result>} tag. This formatting of the answer would help a parser interpret this result potentially, making it clear it is the result of the query.
 
 \item \textit{Limitations}: Similar to question 1, this will only count books where \texttt{"Mary Poppins"} appears in the title directly. If there is a book that is actually about Mary Poppins but does not include her name in the title, it will not be included in the book count.
 
@@ -126,7 +135,8 @@ return <result>{count($b)}</result>
 \begin{verbatim}
 <result>8</result>
 \end{verbatim} 
-\item \textit{XPath}: As XPath and XQuery share the same functions library, we are able to construct an XPath query to accomplish the same functionality. We use the same path component with exactly the same predicates as the XQuery query. We then wrap this within the \texttt{count} function that simply counts the number of returned results. As the results returned by an XPath operation are akin to what is bound by a \texttt{let} statement in XQuery, this operation is seamless:
+
+\item \textit{XPath}: As XPath and XQuery share the same functions library (XQuery being a superset of XPath), we are able to construct an XPath query to accomplish the same functionality. We use the same path component with exactly the same predicates as the XQuery query. We then wrap this within the \texttt{count} function that simply counts the number of returned results. As the results returned by an XPath operation are akin to what is bound by a \texttt{let} statement in XQuery, this operation is seamless:
 \begin{verbatim}
 <result>{
     count(
@@ -135,6 +145,7 @@ return <result>{count($b)}</result>
     ))
 }</result>
 \end{verbatim}
+
 \end{enumerate}
 
 \subsubsection{List the books that have been published before the second Mary Poppins movie appeared.}
