--- a/report/wbbz74.tex
+++ b/report/wbbz74.tex
@@ -35,7 +35,7 @@ See the attached document on the \textbf{final page} of this report for the tree
 
 \section{Querying}
 
-All query files were posted as part of this submission.
+XPath queries have sometimes been broken onto separate lines to fit well in the document---these may need to be returned to a single line before running them.
 
 \subsection{XPath}
 
@@ -45,31 +45,29 @@ All query files were posted as part of this submission.
 \item \textit{Query}:
 \begin{small}
 \begin{verbatim}
-<books>{
-    doc("books.xml")
-    //book[@publicationDate<"1939"]
-    [title[distinct-values(contains(text(),"Mary Poppins"))]]
-}</books>
+//book[@publicationDate<"1939"]
+[title[distinct-values(contains(text(),"Mary Poppins"))]]
 \end{verbatim}
 \end{small}
 
 \item \textit{Interpretation}: This query first uses the Restricted Kleene Closure to find every occurrence of \texttt{<book>} in the XML structure. This ensures that we find all books at all levels of the database (if the database were to be grown in the future or if books were to be located under differently named nodes to what is currently in place). We then use a tag predicate of \texttt{[@publicationDate<"1939"]} to filter out all books that were NOT released before 1939. For all the books returned by this, we then check if they have a \texttt{title} property. If they do, we use a nested predicate to check the title of the book. If the book title contains the string \texttt{"Mary Poppins"} (not including these quotation marks), the full book node will be returned. Only distinct books titles will be included in our results, as we make use of the \texttt{distinct-values} function to ensure that each Mary Poppins book is only included in the result once.
 
 \item \textit{Limitations}: This query will only find Mary Poppins books if her name appears directly in the title. If such a Mary Poppins book existed that did not feature her name in the title, it would not be returned by our query. It is not sufficient just to check the author or illustrator as they may have been involved in creating other books (not Mary Poppins). Additionally, WWII started in September of 1939 and---as we have no way to distinguish the month of publication---it may be the case that a book published in 1939 was actually published before WWII. We have no way of telling this, we just ignore all books published in 1939 to be sure.
+
+Additionally, as this is a query performed with XPath, we have no way to wrap the result in a `resultant' node (such as \texttt{<books></books>}) to help clarify this is a list of book responses and make this result easier for a computer system to parse.
+
 \item \textit{Output}:
 \begin{verbatim}
-<books>
-  <book publicationDate="1934">
-    <title>Mary Poppins</title>
-    <author>P. L. Travers</author>
-    <illustrator>Mary Shepard</illustrator>
-  </book>
-  <book publicationDate="1935">
-    <title>Mary Poppins Comes Back</title>
-    <author>P. L. Travers</author>
-    <illustrator>Mary Shepard</illustrator>
-  </book>
-</books>
+<book publicationDate="1934">
+  <title>Mary Poppins</title>
+  <author>P. L. Travers</author>
+  <illustrator>Mary Shepard</illustrator>
+</book>
+<book publicationDate="1935">
+  <title>Mary Poppins Comes Back</title>
+  <author>P. L. Travers</author>
+  <illustrator>Mary Shepard</illustrator>
+</book>
 \end{verbatim} 
 \end{enumerate}
 
@@ -80,36 +78,35 @@ All query files were posted as part of this submission.
 \item \textit{Query}:
 \begin{small}
 \begin{verbatim}
-<movies>{
-    doc("media.xml")
-    //movie[normalize-space(academyNominations/text()) > "0"]
-}</movies>
+//movie[normalize-space(academyNominations/text()) > "0"]
 \end{verbatim}
 \end{small}
-\item \textit{Interpretation}: This query first uses the Restricted Kleene Closure to find every occurrence of \texttt{<movie>} in the XML structure (we assume ``movie'' refers to the \texttt{<movie>} tag rather than the contents of the \texttt{@type} attribute on each \texttt{<movie>}). This ensures that we find all movies at all levels of the database (if the database were to be grown in the future or if movies were to be placed elsewhere in a large database). We then use a tag predicate of \texttt{academyNominations}, filtering out all movies that do not include an \texttt{<academyNominations>} node. We access the text stored at this node using the XPath \texttt{text()} function. As the XML files provided have whitespace surrounding the text in each node, we use the \texttt{normalize-space} function to remove this whitespace, as to not retrieve inaccurate results. We then ensure that the number of nominations is greater than 0, as it could be possible a movie could have an \texttt{<academyNominations>} node with 0 nominations. Movie nodes filtered out by this predicate are not included in our results.
+\item \textit{Interpretation}: This query first uses the Restricted Kleene Closure to find every occurrence of \texttt{<movie>} in the XML structure (we assume ``movie'' refers to the \texttt{<movie>} object tag rather than the contents of the \texttt{@type} attribute on each \texttt{<movie>}). This ensures that we find all movies at all levels of the database (if the database were to be grown in the future or if movies were to be placed elsewhere in a large database). We then use a tag predicate of \texttt{academyNominations}, filtering out all movies that do not include an \texttt{<academyNominations>} node. We access the text stored at this node using the XPath \texttt{text()} function. As the XML files provided have whitespace surrounding the text in each node, we use the \texttt{normalize-space} function to remove this whitespace, as to not retrieve inaccurate results. We then ensure that the number of nominations is greater than 0, as it could be possible a movie could have an \texttt{<academyNominations>} node with 0 nominations (meaning that it actually does not have any nominations). Movie nodes filtered out by this predicate are not included in our results.
 
-\item \textit{Limitations}: This query relies on the fact that \texttt{academyNominations} are stored as an integer inside the \texttt{<academyNominations>} node. If the nominations were instead listed out (as \texttt{<nominator>} nodes for example), the query would not be able to identify these. Otherwise, if all movies follow this style of listing nominations, there are no further limitations. If one of the other entities in the \texttt{media.xml} file were to receive an \texttt{academyNominations} (such as \texttt{broadcast} or \texttt{theater}), these would not be found, as we only search for \texttt{movie} entities. Although, as this is what the question specifically asks for, this is less of an issue. 
+\item \textit{Limitations}: This query relies on the fact that \texttt{academyNominations} are stored as an integer inside the \texttt{<academyNominations>} node. If the nominations were instead listed out (as \texttt{<nominator>} nodes for example), the query would not be able to identify these.
+Additionally, if the number of nominations were to be written out as text, such as \texttt{"three"}, we would determine that the node is invalid and not include this in our results.
+Otherwise, if all movies follow this style of listing nominations, there are no further limitations. If one of the other entities in the \texttt{media.xml} file were to receive an \texttt{academyNominations} (such as \texttt{broadcast} or \texttt{theater}), these would not be found, as we only search for \texttt{movie} entities. Although, as this is what the question specifically asks for, this is not an issue. 
+
+Additionally, as this is a query performed with XPath, we have no way to wrap the result in a `resultant' node (such as \texttt{<movies></movies>}) to help clarify this is a list of movie responses and make this result easier for a computer system to parse.
 
 \item \textit{Output}:
 \begin{verbatim}
-<movies>
-  <movie year="1964" type="film" language="En">
-    <title>Mary Poppins</title>
-    <actress>Julie Andrews</actress>
-    <actor>Dick Van Dyke</actor>
-    <actor>David Tomlison</actor>
-    <actress>Glynis Johns</actress>
-    <producer>Walt Disney</producer>
-    <director>Robert Stevenson</director>
-    <academyNominations>13</academyNominations>
-  </movie>
-  <movie year="2013" type="film" language="En">
-    <title>Saving Mr. Banks</title>
-    <actress>Emma Thompson</actress>
-    <actor>Tom Hanks</actor>
-    <academyNominations>1</academyNominations>
-  </movie>
-</movies>
+<movie year="1964" type="film" language="En">
+  <title>Mary Poppins</title>
+  <actress>Julie Andrews</actress>
+  <actor>Dick Van Dyke</actor>
+  <actor>David Tomlison</actor>
+  <actress>Glynis Johns</actress>
+  <producer>Walt Disney</producer>
+  <director>Robert Stevenson</director>
+  <academyNominations>13</academyNominations>
+</movie>
+<movie year="2013" type="film" language="En">
+  <title>Saving Mr. Banks</title>
+  <actress>Emma Thompson</actress>
+  <actor>Tom Hanks</actor>
+  <academyNominations>1</academyNominations>
+</movie>
 \end{verbatim} 
 \end{enumerate}
 
@@ -136,14 +133,9 @@ return <result>{count($b)}</result>
 <result>8</result>
 \end{verbatim} 
 
-\item \textit{XPath}: As XPath and XQuery share the same functions library (XQuery being a superset of XPath), we are able to construct an XPath query to accomplish the same functionality. We use the same path component with exactly the same predicates as the XQuery query. We then wrap this within the \texttt{count} function that simply counts the number of returned results. As the results returned by an XPath operation are akin to what is bound by a \texttt{let} statement in XQuery, this operation is seamless:
+\item \textit{XPath}: As XPath and XQuery share the same functions library (XQuery being a superset of XPath), we are able to construct an XPath query to accomplish the same functionality. We use the same path component with exactly the same predicates as the XQuery query. We then wrap this within the \texttt{count} function that simply counts the number of returned results. As the results returned by an XPath operation are akin to what is bound by a \texttt{let} statement in XQuery, this operation is seamless (although, the result is not wrapped in a \texttt{<result>} node):
 \begin{verbatim}
-<result>{
-    count(
-    distinct-values(
-    doc("books.xml")//book[title[contains(text(),"Mary Poppins")]]
-    ))
-}</result>
+count(distinct-values(//book[title[contains(text(),"Mary Poppins")]]))
 \end{verbatim}
 
 \end{enumerate}
@@ -170,7 +162,7 @@ return $b
 </books>
 \end{verbatim}
 \end{small}
-\item \textit{Interpretation}: we firstly need to find what year the second Mary Poppins movie appeared. Therefore, we perform a nested query to return a list of Mary Poppins movies, ordered by the year that they were released (making sure that there are no duplicated movie titles in this list by using the \texttt{distinct-values} function). We search for movies using the Restricted Kleene Closure to ensure that we are able to find all movies if more were to be added to different places in the dataset in the future. We directly index into the returned list using \texttt{\$yrs[2]/@year} to get the year that the second movie was released. This ordering and indexing is a nice interface to easily change this value in the future if the database required it---we simply just change the number of the index to get books released before that specific movie. We then fetch all books from the books database, using a \texttt{where} predicate to only return books that were released before this second movie was released by comparing the \texttt{@publicationDate} to the value of \texttt{\$yr2}. We then return each result that matches this predicate as the successful query cases, wrapped in a \texttt{<books>} result object to make this result easier to parse and interpret as a list of results. This is accomplished using a nested query.
+\item \textit{Interpretation}: we firstly need to find what year the second Mary Poppins movie appeared. Therefore, we perform a nested query to return a list of Mary Poppins movies, ordered by the year that they were released (making sure that there are no duplicated movie titles in this list by using the \texttt{distinct-values} function). We search for movies using the Restricted Kleene Closure to ensure that we are able to find all movies if more were to be added to different places in the dataset in the future. We directly index into the returned list using \texttt{\$yrs[2]/@year} to get the year that the second movie was released. This ordering and indexing is a nice interface to easily change this value in the future if the database required it---we simply just change the number of the index to get books released before that specific movie. We then fetch all books from the books database, using a \texttt{where} predicate to only return books that were released before this second movie was released by comparing the \texttt{@publicationDate} to the value of \texttt{\$yr2}. We then return each result that matches this predicate as the successful query cases, wrapped in a \texttt{<books>} result object to make this result easier to parse and interpret as a list of results. This is accomplished by using a nested query.
 
 \item \textit{Limitations}: this technique suffers from the same limitations as the previous queries, as movies without \texttt{"Mary Poppins"} in the title will not be considered Mary Poppins movies, as these are what is matched against. Additionally, in order for us to find the second released movie, we sort through all movies with Mary Poppins in the title first. If the database contained many movies with \texttt{"Mary Poppins"} in the title, this sorting could take a non-trivial amount of time and impact database performance (as sorting is at least an $\mathcal{O}({n\log{n})}$ operation).
 \item \textit{Output}:
@@ -204,22 +196,19 @@ return $b
 </books>
 \end{verbatim} 
 
-\item \textit{XPath}: If we assume both datasets are present in the same file (where the \texttt{<books>} and \texttt{<media>} nodes are both present within a \texttt{<root>} node, which we will call \texttt{combined.xml}), we can construct a working query---otherwise this would not be possible, as XPath is not able to access more than one file at once. We must assume that the nodes in the \texttt{<books>} and \texttt{<media>} nodes are already ordered by date, which is the major limitation of this technique compared to what we can achieve with XQuery. We return all books where the numeric value of the \texttt{publicationDate} is less than the release year of the second movie that appears in the returned list of movies about Mary Poppins. This query is not as extensible if the size of the database were to be increased.
+\item \textit{XPath}: If we assume both datasets are present in the same file (where the \texttt{<books>} and \texttt{<media>} nodes are both present within a \texttt{<root>} node, which we will call \texttt{combined.xml}), we can construct a working query---otherwise this would not be possible, as XPath is not able to access more than one file at once. We must assume that the nodes in the \texttt{<books>} and \texttt{<media>} nodes are already ordered by date, which is the major limitation of this technique compared to what we can achieve with XQuery. We return all books where the numeric value of the \texttt{publicationDate} is less than the release year of the second movie that appears in the returned list of movies about Mary Poppins. This query is not as extensible if the size of the database were to be increased. \textbf{It is worth clarifying that this query is not possible unless both datasets are present in the same file, as XPath can only query a single file at a time.}
 
 % verified working
 \begin{small}
 \begin{verbatim}
-<books>{
-    doc("combined.xml")//book[
-    number(@publicationDate/string())
-    <
-    number(
-        ancestor::root
-        //movie[title[distinct-values(contains(text(),"Mary Poppins"))]][2]
-        /@year
-    )
-]
-}</books>
+//book[
+number(@publicationDate/string())
+<
+number(
+    ancestor::root
+    //movie[title[distinct-values(contains(text(),"Mary Poppins"))]][2]
+    /@year
+)]
 \end{verbatim}
 \end{small}
 \end{enumerate}
@@ -255,7 +244,7 @@ return <result>{$diff} years</result>
 <result>83 years</result>
 \end{verbatim} 
 % I AM NOT SURE OR NOT IF THIS IS POSSIBLE FOR XPATH, THIS IS JUST A GUESS
-\item \textit{XPath}: This is not a query that is possible for XPath to handle. This is due to the fact there are dependencies on accessing 2 independent lists of data and then the performing of an operation of the result of the two independent lists. As XPath is only able to access a single list of data (and possible compare each value in this list with a single element from another list), this is not able to be done.
+\item \textit{XPath}: This is not a query that is possible for XPath to handle. This is due to the fact there are dependencies on accessing 2 independent lists of data and then the performing of an operation of the result of the two independent lists. As XPath is only able to access a single list of data (and possible compare each value in this list with a single element from another list), this is not able to be done---even if both sets of data were present in the same file.
 \end{enumerate}
 
 
